--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 </head>
 <body>
     <header>
-        <h1>join: cozmicsmp.de</h1>
+        <h1 class="join-content">join: <br> cozmicsmp.de</h1>
 </body>
 </html>
