--- a/index.html
+++ b/index.html
@@ -18,5 +18,10 @@
 <body>
     <header>
         <h1 class="join-content">join: <br> cozmicsmp.de</h1>
+    </header>
+    
+    <div>
+        
+    </div>
 </body>
 </html>
