--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <h1 class="join-content">join: <br> cozmicsmp.de</h1>
     </header>
     
-    <div>
+    <div class="text-center">
+        <h3>Wir sind CozmicSMP</h3>
         
     </div>
 </body>
