--- a/index.html
+++ b/index.html
@@ -17,12 +17,7 @@
 </head>
 <body>
     <header>
-        <h1 class="join-content">join: <br> cozmicsmp.de</h1>
+        <h1 class="join-content">join: <br> IP-Address</h1>
     </header>
-    
-    <div class="text-center">
-        <h2>Wir sind CozmicSMP</h2>
-        
-    </div>
 </body>
 </html>
