--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 </head>
 <body>
     <header>
-        <h1 class="join-content">join: <br> IP-Address</h1>
+        <h1 class="join-content">join: <br> CozmicSMP.de</h1>
     </header>
+
+    
 </body>
 </html>
