edited files: index.html, styles.css

--- a/index.html
+++ b/index.html
@@ -16,10 +16,18 @@
     <title>join: cozmicsmp.de</title>
 </head>
 <body>
-    <header>
-        <h1 class="join-content">join: <br> CozmicSMP.de</h1>
+    
+    <header class="join-content">
+        <h1>join: <br> CozmicSMP.de</h1>
     </header>
 
-    
+    <div class="title-left-bottom">
+        <p>Willkommen auf <br> CozmicSMP!</p>
+    </div>
+
+    <footer>
+        <p>Footer content</p>
+    </footer>
+
 </body>
 </html>
